--- a/EasyInvoice/appsettings.json
+++ b/EasyInvoice/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "EasyInvoiceSecretForJsonWebTokens"
+  },
   "ConnectionStrings": {
     "DbConnection": "Data Source=localhost;Initial Catalog=EasyInvoice;Integrated Security=true"
   },
