--- a/.gitignore
+++ b/.gitignore
@@ -640,3 +640,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 
 # End of https://www.toptal.com/developers/gitignore/api/rider,intellij,csharp,dotnetcore,aspnetcore
+EasyInvoice/appsettings.Development.json
+EasyInvoice/appsettings.json
