--- a/.gitignore
+++ b/.gitignore
@@ -642,3 +642,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/rider,intellij,csharp,dotnetcore,aspnetcore
 EasyInvoice/appsettings.Development.json
 EasyInvoice/appsettings.json
+.DS_Store
